# build-your-x

./: README.md  is-it-a-bird-creating-a-model-from-your-own-data.ipynb  jupyter-notebook-101.ipynb
python/: hello.py
python/notebook/: is-it-a-bird-creating-a-model-from-your-own-data.ipynb  jupyter-notebook-101.ipynb
rust/fancy-os/: Cargo.toml
